<resources>
    <string name="app_name">Rescuer\'s Weeworh</string>
    <string name="action_settings">ตั้งค่า</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!--Login-->
    <string name="login_username">ชื่อผู้ใช้</string>
    <string name="login_password">รหัสผ่าน</string>
    <string name="login_rememberme">จดจำการเข้าสู่ระบบ</string>
    <string name="login_register">ลงทะเบียน</string>
    <string name="login_login">เข้าสู่ระบบ</string>
    <string name="login_loading">กำลังโหลด ...</string>
    <string name="login_problem_title">ไม่สามารถเข้าสู่ระบบได้</string>
    <string name="login_problem_message">กรุณาตรวจสอบ \n\n 1.ชื่อผู้ใช้ หรือรหัสผ่าน \n\n 2.การเชื่อมต่ออินเทอร์เน็ต \n\n</string>

    <!--Main-->
    <string name="main_weeworh">WeeWorh</string>
    <string name="overview">ภาพรวม</string>
    <string name="configuration">ตั้งค่า</string>
    <string name="navigator">การติดตาม</string>
    <string name="main_waiting_gps">กำลังรอสัญญาณพิกัดจากดาวเทียม...</string>
    <string name="main_btn_tosetting">ไปยังหน้าตั้งค่า</string>
    <string name="main_btn_nope">ยกเลิก และปิดแอพพลิเคชัน</string>
    <string name="main_double_tap_exit">กดกลับอีกครั้งเพื่อออกจากแอพพลิเคชัน</string>
    <!-- Main - Overview -->
    <!-- Main - Navigator -->
    <string name="mainnav_curposition_title">ตำแหน่งปัจจุบันของคุณ ...</string>
    <string name="mainnav_navposition_title">ตำแหน่งปัจจุบันของคุณ ...</string>
    <string name="mainnav_marker_curposition_title">ตำแหน่งปัจจุบัน</string>
    <string name="mainnav_marker_curposition_snipet">*</string>
    <string name="mainnav_marker_desposition_title">จุดหมาย</string>
    <string name="mainnav_btn_going">รับผิดชอบเหตุนี้</string>
    <string name="mainnav_btn_close">การช่วยเหลือเสร็จสิ้น</string>
    <string name="mainnav_btn_false">แจ้งเหตุผิดพลาด</string>
    <string name="mainnav_btn_userinfo">ข้อมูลผู้แจ้งเหตุ</string>
    <string name="mainnav_from_curposition"> ระยะทางโดยประมาณจากตำแหน่งปัจจุบัน</string>
    <string name="mainnav_on_sight"> ที่เกิดเหตุอยู่ในระยะสายตาแล้ว</string>
    <string name="mainnav_errs">บริเวณนี้ไม่มีเหตุ</string>
    <string name="mainnav_acctype_traffic">รถชน</string>
    <string name="mainnav_acctype_fires">ไฟไหม้</string>
    <string name="mainnav_acctype_patient">ผู้ป่วย</string>
    <string name="mainnav_acctype_animal">สัตว์ร้าย</string>
    <string name="mainnav_acctype_brawl">ทะเลาะวิวาท</string>
    <string name="mainnav_acctype_other">อื่นๆ</string>
    <string name="mainnav_acctype_unknown">ระบุไม่ได้</string>
    <string name="mainnav_leave_nav">ต้องการที่จะออกจากหน้าการติดตามหรือไม่ ? </string>
    <string name="mainnav_stay_here">ไม่ต้องการ</string>
    <string name="mainnav_incident_is_near">กำลังเข้าใกล้ที่เกิดเหตุแล้ว</string>
    <string name="mainnav_already_got_case">ไม่สามารถทำได้เมื่อคุณมีเหตุที่ต้องรับผิดชอบอยู่แล้ว</string>
    <string name="mainnav_continue_rescue">ดำเนินการช่วยเหลือต่อ</string>
    <string name="mainnav_continue_to_close">ปิดเคสการช่วยเหลือ</string>
    <string name="mainnav_find_nearest_hospital">ค้นหาโรงพยาบาลใกล้เคียง</string>
    <string name="mainnav_result_nearest_hospital_tiitle">ผลลัพธ์ของโรงพยาบาลใกล้เคียง</string>
    <string name="mainnav_no_result_nearest_hospital_tiitle">ไม่พบผลลัพธ์ของโรงพยาบาลใกล้เคียงในฐานข้อมูลระบบ</string>
    <!-- Main - Register Hospital  -->
    <string name="mainnav_register_hospital_name">ชื่อโรงพยาบาล</string>
    <string name="mainnav_register_hospital">จดจำโรงพยาบาล</string>
    <string name="mainnav_register_hospital_alreadey_regis1">เราพบว่าตำแหน่งปัจจุบันของคุณนั้นอยู่ใกล้กับ</string>
    <string name="mainnav_register_hospital_alreadey_regis2">ระบบจะทำการเก็บค่าความแม่นยำเมื่อคุณ \'ส่ง\' พิกัดปัจจุบัน</string>
    <string name="mainnav_register_hospital_success">การจดจำโรงพยาบาลสำเร็จเรียบร้อย</string>
    <string name="mainnav_register_hospital_fail">โรงพยาบาลนี้ได้ถูกบันทึกลงฐานข้อมูลเรียบร้อยแล้ว</string>
    <string name="mainnav_current_geo">\n<u>พิกัดปัจจุบัน</u> : </string>

    <!-- Main - Configuration -->
    <string name="maincon_lang">ภาษา</string>
    <string name="maincon_keep_screen_on">ป้องกันสลีปโหมด</string>
    <string name="maincon_lockscr">ล็อคหน้าจอ</string>
    <string name="maincon_logout">ออกจากระบบ</string>
    <string-array name="maincon_langs">
        <item>English</item>
        <item>ภาษาไทย</item>
    </string-array>

    <!--Firebase Messaging Service-->
    <string name="fbservice_incidet_alert">มีเหตุเกิดขึ้น (กดเพื่อดูรายละเอียด)</string>
    <string name="fbservice_incidet_report_from">แจ้งโดย </string>
    <!--Incident Monitoring Service-->
    <string name="mrservice_close_title">กรุณายืนยันการกระทำ</string>
    <string name="mrservice_close_message">คุณต้องการยืนยันการปิดเคสช่วยเหลือนี้ใช่หรือไม่</string>
    <string name="mrservice_close_result_success">สำเร็จ</string>
    <string name="mrservice_close_result_fail">ล้มเหลว... กรุณาตรวจสอบการเชื่อมต่ออินเตอร์เน็ตและลองอีกครั้ง</string>
    <string name="mrservice_acc_status_a">ร้องขอความช่วยเหลือ</string>
    <string name="mrservice_acc_status_g">กำลังเดินทาง...</string>
    <string name="mrservice_acc_status_r">อยู่ในพื้นที่แจ้งเหตุ</string>
    <string name="mrservice_acc_status_c">ปิดเคสการช่วยเหลือแล้ว</string>
    <string name="mrservice_acc_status_erru">ผู้แจ้งยกเลิกการขอความช่วยเหลือ</string>
    <string name="mrservice_acc_status_errs">เการแจ้งเหตุผิดพลาก</string>
    <string name="mrservice_acc_status_und">ไม่สามารถระบุได้</string>
    <string name="mrservice_acc_type_crash">อุบัติเหตุจราจร</string>
    <string name="mrservice_acc_type_fire">อัคคีภัย</string>
    <string name="mrservice_acc_type_brawl">ทะเลาะวิวาท</string>
    <string name="mrservice_acc_type_patient">ผู้ป่วยโคม่า</string>
    <string name="mrservice_acc_type_animal">สัตว์อันตราย</string>
    <string name="mrservice_acc_type_other">อื่นๆ</string>
    <string name="mrservice_acc_type">ประเภทเหตุ</string>
    <string name="mrservice_already_accepted">เหตุนี้อยู่ในความรับผิดชอบของเจ้าหน้าที่อื่นแล้ว</string>
    <string name="mrservice_responsbler">ผู้รับผิดชอบ</string>

    <!--Simple-->
    <string name="ok">ตกลง</string>
    <string name="submit">ส่ง</string>
    <string name="cancel">ยกเลิก</string>
    <string name="close">ปิด</string>
    <string name="dismiss">ไม่สนใจ</string>
    <string name="acknowledge">รับทราบ</string>
    <string name="on">เปิด</string>
    <string name="off">ปิด</string>
    <string name="yes">ใช่</string>
    <string name="no">ไม่</string>
    <string name="kms"> กิโลเมตร </string>
    <string name="call"> ติดต่อกับผู้แจ้งเหตุ </string>
    <string name="ack_call">รับทราบและติดต่อกับผู้แจ้งเหตุ </string>
    <string name="status"> สถานะ </string>
    <string name="try_again">ลองอีกครั้ง</string>
    <string name="warning">คำเตือน</string>
    <string name="progressing">กำลังดำเนินการ</string>
    <string name="request_cancelled">การข้อความช่วยเหลือถูกยกเลิก</string>
    <string name="kilometer">กิโลเมตร</string>
    <string name="current_position">ตำแหน่งปัจจุบัน</string>

    <!--Warning-->
    <string name="warn_no_network">ไม่มีการเชื่อมต่ออินเทอร์เน็ต</string>
    <string name="warn_no_profile">บัญชีผู้ใช้ไม่พร้อมใช้งาน</string>
    <string name="warn_no_location_permission">แอพพลิเคชันนี้ต้องการการเข้าถึงสถานที่ ไม่เช่นนั้นฟังก์ชันนี้จะไม่ทำงาน</string>
    <string name="warn_no_accidents">ขณะนี้ไม่มีเหตุเกิดขึ้น</string>
    <string name="warn_youre_quiting">ต้องการออกจากแอพพลิเคชันหรือไม่ ? </string>
    <string name="warn_youre_logout">ต้องการออกจากระบบหรือไม่ ? </string>
    <string name="warn_youre_ready_to_go">คุณมีเหตุที่รับผิดชอบอยู่เเล้ว</string>
    <string name="warn_navigating_not_allow">ในขณะปฏิบัติหน้าที่ ไม่อนุญาติให้ออกจากหน้านี้</string>
    <string name="title_activity_maps">แผนที่</string>
    <string name="warn_user_request_cancel">ผู้แจ้งเหตุได้ทำการยกเลิกการขอความช่วยเหลือ</string>
    <string name="warn_user_close_incident">คุณต้องการปิดเคสช่วยเหลือนี้ใช่หรือไม่</string>
    <string name="warn_close_incident_undone">การกระทำนี้ไม่สามารถย้อนกลับไปได้ กรุณามั่นใจในการกระทำและเลือก \"ใช่\"</string>
    <string name="warn_in_responsible_found">เราพบว่าคุณยังมีเคสการช่วยเหลือที่ยังไม่เสร็จสิ้น กรุณาเลือก \n<b>\"ดำเนินการช่วยเหลือต่อ\"</b> หรือ \n<b>\"ปิดเคสการช่วยเหลือ\"</b></string>
    <string name="warn_responsible_logout">ระบบไม่อนุญาตการออกจากระบบเมื่อยังมีเคสการช่วยเหลือ</string>
    <string name="warn_unhandler_exception">การทำงานผิดพลาด กรุณาติดต่อผู้พัฒนา</string>

    <!--Class-->

    <!-- Absolate View -->
    <string name="vwuinfo_name">ผู้แจ้งเหตุ : </string>
    <string name="vwuinfo_personno">เลขประจำตัวประชาชน : </string>
    <string name="vwuinfo_address">ที่อยู่ผู้แจ้งเหตุ : </string>
    <string name="vwuinfo_phoneno">หมายเลขโทรศัพท์ : </string>

</resources>
